feat: Add endpoint to get all real users from specific groups
